kuber/kuber-05/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-back
spec:
  selector:
    app: backend
  ports:
    - name: multitool-service-port
      protocol: TCP
      port: 9002
      targetPort: 80
