kuber/kuber-05/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-front
spec:
  selector:
    app: frontend
  ports:
    - name: nginx-service-port
      protocol: TCP
      port: 9001
      targetPort: 80
