kuber/kuber-05/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - pathType: Prefix
          backend:
            service:
              name: service-front
              port:
                number: 9001
          path: /
        - pathType: Prefix
          backend:
            service:
              name: service-back
              port:
                number: 9002
          path: /api
